@@ -20,6 +20,7 @@
 
 #include "R_interface_common.hpp"
 #include "R_interface_crossvalidate.hpp"
+#include "R_interface_rbart.hpp"
 #include "R_interface_sampler.hpp"
 
 using std::size_t;
@@ -378,6 +379,8 @@ extern "C" {
     // below: testing
     DEF_FUNC("dbarts_setSIMDInstructionSet", setSIMDInstructionSet, 1),
     DEF_FUNC("dbarts_getMaxSIMDInstructionSet", getMaxSIMDInstructionSet, 0),
+
+    DEF_FUNC("rbart_fitted", rbart_getFitted, 4),
     { NULL, NULL, 0 }
   };
 
